--- a/Race/package.json
+++ b/Race/package.json
@@ -15,7 +15,8 @@
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-safe-area-context": "^4.2.5",
-    "react-native-screens": "^3.13.1"
+    "react-native-screens": "^3.13.1",
+    "socket.io-client": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
